fixed navbar and alignment of posts

--- a/index.html
+++ b/index.html
@@ -17,78 +17,81 @@
 
 <body>
     <header>
-        <div class="top-bar-div">
-            <a class="my-subreddits" href="">MY SUBREDDITS &#x1F783</a>
-            <a class="popular" href="">POPULAR</a>
-            <p> &ndash; </p>
-            <a class="top-bar-links" href="">ALL</a>
-            <p> &ndash; </p>
-            <a class="top-bar-links" href="">USERS</a>
-            <p> &vert; </p>
-            <a class="top-bar-links" href="">ASKREDDIT</a>
-            <p> &ndash; </p>
-            <a class="top-bar-links" href="">PICS</a>
-            <p> &ndash; </p>
-            <a class="top-bar-links" href="">FUNNY</a>
-            <p> &ndash; </p>
-            <a class="top-bar-links" href="">MOVIES</a>
-            <p> &ndash; </p>
-            <a class="top-bar-links" href="">GAMING</a>
-            <p> &ndash; </p>
-            <a class="top-bar-links" href="">WORLDNEWS</a>
-            <p> &ndash; </p>
-            <a class="top-bar-links" href="">NEWS</a>
-            <p> &ndash; </p>
-            <a class="top-bar-links" href="">TODAYILEARNED</a>
-            <p> &ndash; </p>
-            <a class="top-bar-links" href="">NOTTHEONION</a>
-            <p> &ndash; </p>
-            <a class="top-bar-links" href="">EXPLAINLIKEIMFIVE</a>
-            <p> &ndash; </p>
-            <a class="top-bar-links" href="">MIDLYINTERESTING</a>
-            <p> &ndash; </p>
-            <a class="top-bar-links" href="">DIY</a>
-            <p> &ndash; </p>
-            <a class="top-bar-links" href="">VIDEOS</a>
-            <p> &ndash; </p>
-            <a class="top-bar-links" href="">OLDSCHOOL</a>
-            <p> &ndash; </p>
-            <a class="top-bar-links" href="">EUROPE</a>
-            <p> &ndash; </p>
-            <a class="top-bar-links" href="">TWOXCHROMOSOMES</a>
-            <p> &ndash; </p>
-            <a class="top-bar-links" href="">TIFU</a>
-            <p> &ndash; </p>
-            <a class="top-bar-links" href="">MUSIC</a>
-            <p> &ndash; </p>
-            <a class="top-bar-links" href="">BOOKS</a>
-            <p> &ndash; </p>
-            <a class="top-bar-links" href="">LIFPROTIPS</a>
-            <p> &ndash; </p>
-            <a class="top-bar-links" href="">DATAISBEAUTIFUL</a>
-            <p> &ndash; </p>
-            <a class="top-bar-links" href="">AWW</a>
-            <p> &ndash; </p>
-            <a class="top-bar-links" href="">SCIENCE</a>
-            <p> &ndash; </p>
-            <a class="top-bar-links" href="">SPACE</a>
-            <p> &ndash; </p>
-            <a class="top-bar-links" href="">SHOWERTHOUGHTS</a>
-            <p> &ndash; </p>
-            <a class="top-bar-links" href="">ASKSCIENCE</a>
-            <p> &ndash; </p>
-            <a class="top-bar-links" href="">JOKES</a>
-            <p> &ndash; </p>
-            <a class="top-bar-links" href="">IAMA</a>
-            <p> &ndash; </p>
-            <a class="top-bar-links" href="">SHOWERTHOUGHTS</a>
-            <p> &ndash; </p>
-            <a class="top-bar-links" href="">ASKSCIENCE</a>
-            <p> &ndash; </p>
-            <a class="top-bar-links" href="">JOKES</a>
-            <p> &ndash; </p>
-            <a class="more" href="">MORE &#187</a>
-        </div>
+        <nav>
+            <div class="navbar">
+                <a id="my-subreddits" href="">MY SUBREDDITS &#x1F783</a>
+                <a id="popular" href="">POPULAR</a>
+                <p> &ndash; </p>
+                <a class="top-bar-links" href="">ALL</a>
+                <p> &ndash; </p>
+                <a class="top-bar-links" href="">USERS</a>
+                <p> &vert; </p>
+                <a class="top-bar-links" href="">ASKREDDIT</a>
+                <p> &ndash; </p>
+                <a class="top-bar-links" href="">PICS</a>
+                <p> &ndash; </p>
+                <a class="top-bar-links" href="">FUNNY</a>
+                <p> &ndash; </p>
+                <a class="top-bar-links" href="">MOVIES</a>
+                <p> &ndash; </p>
+                <a class="top-bar-links" href="">GAMING</a>
+                <p> &ndash; </p>
+                <a class="top-bar-links" href="">WORLDNEWS</a>
+                <p> &ndash; </p>
+                <a class="top-bar-links" href="">NEWS</a>
+                <p> &ndash; </p>
+                <a class="top-bar-links" href="">TODAYILEARNED</a>
+                <p> &ndash; </p>
+                <a class="top-bar-links" href="">NOTTHEONION</a>
+                <p> &ndash; </p>
+                <a class="top-bar-links" href="">EXPLAINLIKEIMFIVE</a>
+                <p> &ndash; </p>
+                <a class="top-bar-links" href="">MIDLYINTERESTING</a>
+                <p> &ndash; </p>
+                <a class="top-bar-links" href="">DIY</a>
+                <p> &ndash; </p>
+                <a class="top-bar-links" href="">VIDEOS</a>
+                <p> &ndash; </p>
+                <a class="top-bar-links" href="">OLDSCHOOL</a>
+                <p> &ndash; </p>
+                <a class="top-bar-links" href="">EUROPE</a>
+                <p> &ndash; </p>
+                <a class="top-bar-links" href="">TWOXCHROMOSOMES</a>
+                <p> &ndash; </p>
+                <a class="top-bar-links" href="">TIFU</a>
+                <p> &ndash; </p>
+                <a class="top-bar-links" href="">MUSIC</a>
+                <p> &ndash; </p>
+                <a class="top-bar-links" href="">BOOKS</a>
+                <p> &ndash; </p>
+                <a class="top-bar-links" href="">LIFPROTIPS</a>
+                <p> &ndash; </p>
+                <a class="top-bar-links" href="">DATAISBEAUTIFUL</a>
+                <p> &ndash; </p>
+                <a class="top-bar-links" href="">AWW</a>
+                <p> &ndash; </p>
+                <a class="top-bar-links" href="">SCIENCE</a>
+                <p> &ndash; </p>
+                <a class="top-bar-links" href="">SPACE</a>
+                <p> &ndash; </p>
+                <a class="top-bar-links" href="">SHOWERTHOUGHTS</a>
+                <p> &ndash; </p>
+                <a class="top-bar-links" href="">ASKSCIENCE</a>
+                <p> &ndash; </p>
+                <a class="top-bar-links" href="">JOKES</a>
+                <p> &ndash; </p>
+                <a class="top-bar-links" href="">IAMA</a>
+                <p> &ndash; </p>
+                <a class="top-bar-links" href="">SHOWERTHOUGHTS</a>
+                <p> &ndash; </p>
+                <a class="top-bar-links" href="">ASKSCIENCE</a>
+                <p> &ndash; </p>
+                <a class="top-bar-links" href="">JOKES</a>
+                <p> &ndash; </p>
+            </div>
+            <a id="more" href="">MORE &#187</a>
+
+        </nav>
     </header>
 
     <div class="reddit-logo-div">
@@ -105,6 +108,18 @@
                 seconds.</p>
         </div>
     </div>
+
+    <div id="popular-search">
+        <p>popular in: <span>Sweden&#x1F783</span></p>
+
+        <div id="post-container">
+            <input type="text" placeholder="search">
+            <button>Submit a new link</button>
+            <button>Submit a new text post</button>
+        </div>
+    </div>
+
+
 </body>
 
 </html>
