--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>reddit: the front page of the internet</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="icon" type="image/svg+xml" href="images/post-image.svg">
     <link rel="icon" type="image/png" href="images/post-image.png" sizes="32x32">
 
@@ -89,7 +89,6 @@
                 <a class="top-bar-links" href="">JOKES</a>
             </div>
             <a id="more" href="">MORE &#187</a>
-
         </nav>
     </header>
 
@@ -123,6 +122,29 @@
     <p id="view-more">view more: </p>
     <button id="next-button">next ></button>
 
+    <footer>
+        <div id="about">
+            <p>about</p>
+            <a href="">blog</a>
+            <a href="">about</a>
+            <a href="">advertising</a>
+            <a href="">career</a>
+        </div>
+        <div id="help">
+            <p>help</p>
+            <a href="">site rules</a>
+            <a href="">Reddit help center</a>
+            <a href="">reddiquette</a>
+            <a href="">mod guidelines</a>
+            <a href="">contact us</a>
+        </div>
+        <div id="apps">
+            <p>apps & tools</p>
+            <a href="">Reddit for iPhone</a>
+            <a href="">Reddit for Android</a>
+            <a href="">mobile website</a>
+        </div>
+    </footer>
 </body>
 
 </html>
