reized website posts

--- a/index.html
+++ b/index.html
@@ -119,8 +119,10 @@
 
     <div id="posts-container"></div>
 
-    <p id="view-more">view more: </p>
-    <button id="next-button">next ></button>
+    <div id="view-more-div">
+        <p>view more: </p>
+        <button>next ></button>
+    </div>
 
     <footer>
         <div id="about">
