reized search bar and submit posts buttons, added arrows to like/dislike buttons added colors to like/dislike buttons

--- a/index.html
+++ b/index.html
@@ -88,22 +88,21 @@
                 <p> &ndash; </p>
                 <a class="top-bar-links" href="">JOKES</a>
             </div>
-            <a id="more" href="">MORE &#187</a>
+            <a id="more-button" href="">MORE &#187</a>
         </nav>
     </header>
 
     <div class="reddit-logo-div">
         <img class="reddit-logo" src="images/reddit_logo.svg" alt="">
         <a id="logo-options" class="reddit-logo-options" href="">hot</a>
-        <a class="reddit-logo-options" href="">new</a>
-        <a class="reddit-logo-options" href="">rising</a>
-        <a class="reddit-logo-options" href="">controversial</a>
-        <a class="reddit-logo-options" href="">top</a>
-        <a class="reddit-logo-options" href="">wiki</a>
+        <a href="">new</a>
+        <a href="">rising</a>
+        <a href="">controversial</a>
+        <a href="">top</a>
+        <a href="">wiki</a>
         <div class="sign-up-div">
             <p class="join-text">Want to join? <span class="log-in-button">Log in</span> or <span
-                    class="sign-up-button">sign up</span> in
-                seconds.</p>
+                    class="sign-up-button">sign up</span> in seconds.</p>
         </div>
     </div>
 
