fixed post underlines when hovering links and buttons

--- a/index.html
+++ b/index.html
@@ -110,7 +110,11 @@
         <p>popular in: <span>Sweden&#x1F783</span></p>
 
         <div id="post-container">
-            <input type="text" placeholder="search">
+            <div id="search-bar">
+                <input type="text" placeholder="search">
+                <div id="magnifying-glass"></div>
+            </div>
+
             <button>Submit a new links</button>
             <button>Submit a new text post</button>
         </div>
@@ -124,26 +128,28 @@
     </div>
 
     <footer>
-        <div id="about">
-            <p>about</p>
-            <a href="">blog</a>
-            <a href="">about</a>
-            <a href="">advertising</a>
-            <a href="">career</a>
-        </div>
-        <div id="help">
-            <p>help</p>
-            <a href="">site rules</a>
-            <a href="">Reddit help center</a>
-            <a href="">reddiquette</a>
-            <a href="">mod guidelines</a>
-            <a href="">contact us</a>
-        </div>
-        <div id="apps">
-            <p>apps & tools</p>
-            <a href="">Reddit for iPhone</a>
-            <a href="">Reddit for Android</a>
-            <a href="">mobile website</a>
+        <div id="footer-box">
+            <div id="about">
+                <p>about</p>
+                <a href="">blog</a>
+                <a href="">about</a>
+                <a href="">advertising</a>
+                <a href="">career</a>
+            </div>
+            <div id="help">
+                <p>help</p>
+                <a href="">site rules</a>
+                <a href="">Reddit help center</a>
+                <a href="">reddiquette</a>
+                <a href="">mod guidelines</a>
+                <a href="">contact us</a>
+            </div>
+            <div id="apps">
+                <p>apps & tools</p>
+                <a href="">Reddit for iPhone</a>
+                <a href="">Reddit for Android</a>
+                <a href="">mobile website</a>
+            </div>
         </div>
     </footer>
 </body>
