added javascript folder

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="icon" type="image/svg+xml" href="images/post-image.svg">
     <link rel="icon" type="image/png" href="images/post-image.png" sizes="32x32">
 
-    <script type="module" src="fetchPostService.js"></script>
-    <script type="module" src="populatePost.js"></script>
+    <script type="module" src="javascript/fetchPostService.js"></script>
+    <script type="module" src="javascript/populatePosts.js"></script>
 
 </head>
 
