created post page

--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
             </div>
 
             <button>Submit a new links</button>
-            <button>Submit a new text post</button>
+            <a href="html/create-post.html">
+                <button>Submit a new text post</button>
+            </a>
         </div>
     </div>
 
