deleted unnecessary files

--- a/index.html
+++ b/index.html
@@ -114,8 +114,9 @@
                 <input type="text" placeholder="search">
                 <div id="magnifying-glass"></div>
             </div>
-
-            <button>Submit a new links</button>
+            <a href="html/create-post.html">
+                <button>Submit a new links</button>
+            </a>
             <a href="html/create-post.html">
                 <button>Submit a new text post</button>
             </a>
