fetching sub-reddits from database

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <script type="module" src="javascript/fetchPostService.js"></script>
     <script type="module" src="javascript/populatePosts.js"></script>
+    <script type="module" src="javascript/populateNavbar.js"></script>
 
 </head>
 
@@ -26,7 +27,8 @@
                 <p> &ndash; </p>
                 <a class="top-bar-links" href="">USERS</a>
                 <p> &vert; </p>
-                <a class="top-bar-links" href="">ASKREDDIT</a>
+                <div id="top-subreddits"></div>
+                <!-- <a class="top-bar-links" href="">ASKREDDIT</a>
                 <p> &ndash; </p>
                 <a class="top-bar-links" href="">PICS</a>
                 <p> &ndash; </p>
@@ -86,7 +88,7 @@
                 <p> &ndash; </p>
                 <a class="top-bar-links" href="">ASKSCIENCE</a>
                 <p> &ndash; </p>
-                <a class="top-bar-links" href="">JOKES</a>
+                <a class="top-bar-links" href="">JOKES</a> -->
             </div>
             <a id="more-button" href="">MORE &#187</a>
         </nav>
