added navbar on create post and post page

--- a/index.html
+++ b/index.html
@@ -7,39 +7,30 @@
 
     <title>reddit: the front page of the internet</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/navbar.css">
     <link rel="icon" type="image/svg+xml" href="images/post-image.svg">
     <link rel="icon" type="image/png" href="images/post-image.png" sizes="32x32">
 
+    <script type="module" src="javascript/printNavbar.js"></script>
+    <script type="module" src="javascript/populateNavbar.js"></script>
     <script type="module" src="javascript/fetchPostService.js"></script>
     <script type="module" src="javascript/populatePosts.js"></script>
-    <script type="module" src="javascript/populateNavbar.js"></script>
 
 </head>
 
 <body>
-    <nav>
-        <a id="my-subreddits" href="">MY SUBREDDITS &#x1F783</a>
-        <a id="popular" href="">POPULAR</a>
-        <p>&ndash;</p>
-        <a class="top-bar-links" href="">ALL</a>
-        <p>&ndash;</p>
-        <a class="top-bar-links" href="">USERS</a>
-        <p>&vert;</p>
-        <div id="top-subreddits"></div>
-        <a id="more-button" href="">MORE &#187</a>
-    </nav>
+    <nav></nav>
 
-    <div class="reddit-logo-div">
-        <img class="reddit-logo" src="images/reddit_logo.svg" alt="">
-        <a id="logo-options" class="reddit-logo-options" href="">hot</a>
+    <div id="reddit-logo-div">
+        <img src="images/reddit_logo.svg" alt="">
+        <a id="logo-options" href="">hot</a>
         <a href="">new</a>
         <a href="">rising</a>
         <a href="">controversial</a>
         <a href="">top</a>
         <a href="">wiki</a>
-        <div class="sign-up-div">
-            <p class="join-text">Want to join? <span class="log-in-button">Log in</span> or <span
-                    class="sign-up-button">sign up</span> in seconds.</p>
+        <div id="sign-up-div">
+            <p>Want to join? <span>Log in</span> or <span class="sign-up-button">sign up</span> in seconds.</p>
         </div>
     </div>
 
