--- a/html/create-post.html
+++ b/html/create-post.html
@@ -6,12 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Create reddit post</title>
+    <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/create-post.css">
     <link rel="icon" type="image/svg+xml" href="../images/post-image.svg">
     <link rel="icon" type="image/png" href="../images/post-image.png" sizes="32x32">
+
+    <script type="module" src="../javascript/printNavbar.js"></script>
+    <script type="module" src="../javascript/populateNavbar.js"></script>
 </head>
 
 <body>
+    <nav></nav>
+
     <p id="header">submit to reddit</p>
     <div id="post-window">
         <p id="post-info">You are submitting a text-based post. Speak your mind. A title is required, but expanding
