--- a/html/post-page.html
+++ b/html/post-page.html
@@ -6,12 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>reddit post</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/navbar.css">
+    <link rel="stylesheet" href="../css/post-page.css">
     <link rel="icon" type="image/svg+xml" href="images/post-image.svg">
     <link rel="icon" type="image/png" href="images/post-image.png" sizes="32x32">
+
+    <script type="module" src="../javascript/printNavbar.js"></script>
+    <script type="module" src="../javascript/populateNavbar.js"></script>
 </head>
 
 <body>
+    <nav></nav>
     <p>post page</p>
 </body>
 
