--- a/html/create-post.html
+++ b/html/create-post.html
@@ -8,15 +8,19 @@
     <title>Create reddit post</title>
     <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/create-post.css">
+    <link rel="stylesheet" href="../css/header-nav.css">
     <link rel="icon" type="image/svg+xml" href="../images/post-image.svg">
     <link rel="icon" type="image/png" href="../images/post-image.png" sizes="32x32">
 
     <script type="module" src="../javascript/printNavbar.js"></script>
     <script type="module" src="../javascript/populateNavbar.js"></script>
+    <script type="module" src="../javascript/printHeaderNav.js"></script>
 </head>
 
 <body>
     <nav></nav>
+
+    <div id="header-nav"></div>
 
     <p id="header">submit to reddit</p>
     <div id="post-window">
