--- a/html/post-page.html
+++ b/html/post-page.html
@@ -8,15 +8,20 @@
     <title>reddit post</title>
     <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/post-page.css">
+    <link rel="stylesheet" href="../css/header-nav.css">
     <link rel="icon" type="image/svg+xml" href="images/post-image.svg">
     <link rel="icon" type="image/png" href="images/post-image.png" sizes="32x32">
 
     <script type="module" src="../javascript/printNavbar.js"></script>
     <script type="module" src="../javascript/populateNavbar.js"></script>
+    <script type="module" src="../javascript/printHeaderNav.js"></script>
 </head>
 
 <body>
     <nav></nav>
+
+    <div id="header-nav"></div>
+
     <p>post page</p>
 </body>
 
