--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <title>reddit: the front page of the internet</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/navbar.css">
+    <link rel="stylesheet" href="/css/header-nav.css">
     <link rel="icon" type="image/svg+xml" href="images/post-image.svg">
     <link rel="icon" type="image/png" href="images/post-image.png" sizes="32x32">
 
     <script type="module" src="javascript/printNavbar.js"></script>
     <script type="module" src="javascript/populateNavbar.js"></script>
+    <script type="module" src="javascript/printHeaderNav.js"></script>
     <script type="module" src="javascript/fetchPostService.js"></script>
     <script type="module" src="javascript/populatePosts.js"></script>
 
@@ -21,18 +23,7 @@
 <body>
     <nav></nav>
 
-    <div id="reddit-logo-div">
-        <img src="images/reddit_logo.svg" alt="">
-        <a id="logo-options" href="">hot</a>
-        <a href="">new</a>
-        <a href="">rising</a>
-        <a href="">controversial</a>
-        <a href="">top</a>
-        <a href="">wiki</a>
-        <div id="sign-up-div">
-            <p>Want to join? <span>Log in</span> or <span class="sign-up-button">sign up</span> in seconds.</p>
-        </div>
-    </div>
+    <div id="header-nav"></div>
 
     <div id="popular-search">
         <p>popular in: <span>Sweden&#x1F783</span></p>
