--- a/html/create-post.html
+++ b/html/create-post.html
@@ -9,12 +9,14 @@
     <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/create-post.css">
     <link rel="stylesheet" href="../css/header-nav.css">
+    <link rel="stylesheet" href="../css/footer.css">
     <link rel="icon" type="image/svg+xml" href="../images/post-image.svg">
     <link rel="icon" type="image/png" href="../images/post-image.png" sizes="32x32">
 
     <script type="module" src="../javascript/printNavbar.js"></script>
     <script type="module" src="../javascript/populateNavbar.js"></script>
     <script type="module" src="../javascript/printHeaderNav.js"></script>
+    <script type="module" src="../javascript/printFooter.js"></script>
 </head>
 
 <body>
@@ -48,6 +50,8 @@
             </select>
         </div>
     </div>
+
+    <footer></footer>
 </body>
 
 </html>
