--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/navbar.css">
     <link rel="stylesheet" href="/css/header-nav.css">
+    <link rel="stylesheet" href="/css/footer.css">
     <link rel="icon" type="image/svg+xml" href="images/post-image.svg">
     <link rel="icon" type="image/png" href="images/post-image.png" sizes="32x32">
 
@@ -17,6 +18,7 @@
     <script type="module" src="javascript/printHeaderNav.js"></script>
     <script type="module" src="javascript/fetchPostService.js"></script>
     <script type="module" src="javascript/populatePosts.js"></script>
+    <script type="module" src="javascript/printFooter.js"></script>
 
 </head>
 
@@ -49,31 +51,7 @@
         <button>next ></button>
     </div>
 
-    <footer>
-        <div id="footer-box">
-            <div id="about">
-                <p>about</p>
-                <a href="">blog</a>
-                <a href="">about</a>
-                <a href="">advertising</a>
-                <a href="">career</a>
-            </div>
-            <div id="help">
-                <p>help</p>
-                <a href="">site rules</a>
-                <a href="">Reddit help center</a>
-                <a href="">reddiquette</a>
-                <a href="">mod guidelines</a>
-                <a href="">contact us</a>
-            </div>
-            <div id="apps">
-                <p>apps & tools</p>
-                <a href="">Reddit for iPhone</a>
-                <a href="">Reddit for Android</a>
-                <a href="">mobile website</a>
-            </div>
-        </div>
-    </footer>
+    <footer></footer>
 </body>
 
 </html>
