--- a/html/create-post.html
+++ b/html/create-post.html
@@ -18,6 +18,8 @@
     <script type="module" src="../javascript/printHeaderNav.js"></script>
     <script type="module" src="../javascript/printFooter.js"></script>
     <script type="module" src="../javascript/createPost.js"></script>
+    <script type="module" src="../javascript/populateSubRedditSelect.js"></script>
+    <script type="module" src="../javascript/populateUserSelect.js"></script>
 </head>
 
 <body>
@@ -43,12 +45,11 @@
             <p id="required">*required</p>
             <div id="submit-post">
                 <button>submit</button>
-                <select name="users">
-                    <option id="select" value="select-user">select user</option>
-                    <option value="user1">user_1</option>
-                    <option value="user2">user_2</option>
-                    <option value="user3">user_3</option>
-                    <option value="user4">user_4</option>
+                <select name="users" id="select-user">
+                    <option value="" disabled selected>select user</option>
+                </select>
+                <select name="sub-reddits" id="select-subreddit">
+                    <option value="" disabled selected>select-subreddit</option>
                 </select>
             </div>
         </form>
