--- a/html/post-page.html
+++ b/html/post-page.html
@@ -10,12 +10,15 @@
     <link rel="stylesheet" href="../css/post-page.css">
     <link rel="stylesheet" href="../css/header-nav.css">
     <link rel="stylesheet" href="../css/footer.css">
-    <link rel="icon" type="image/svg+xml" href="images/post-image.svg">
-    <link rel="icon" type="image/png" href="images/post-image.png" sizes="32x32">
+    <link rel="icon" type="image/svg+xml" href="../images/post-image.svg">
+    <link rel="icon" type="image/png" href="../images/post-image.png" sizes="32x32">
 
     <script type="module" src="../javascript/printNavbar.js"></script>
     <script type="module" src="../javascript/populateNavbar.js"></script>
     <script type="module" src="../javascript/printHeaderNav.js"></script>
+    <script type="module" src="../javascript/createComment.js"></script>
+    <script type="module" src="../javascript/populateUserSelect.js"></script>
+    <script type="module" src="../javascript/populateSpecificPost.js"></script>
     <script type="module" src="../javascript/printFooter.js"></script>
 </head>
 
@@ -26,81 +29,22 @@
 
         <div id="header-nav"></div>
 
-        <div id="post-container">
-            <div id="rating-buttons">
-                <p id="rate-up"></p>
-                <p id="rating">69</p>
-                <p id="rate-down"></p>
-            </div>
-            <div id="post-info">
-                <p id="post-title">Teslaägare: ångrar ni er?</p>
-                <p id="post-details">submitted 2 hours ago by <span>Big-Cap558Sverige</span></p>
-                <p id="post-content">Tesla Model Y var ju Sveriges mest sålda bil förra året. Det räntefria lånet
-                    lockade säkert många. <br>
+        <div id="post-container"></div>
 
-                    Samtidigt hamnade Tesla i blåsväder efter IF Metalls strejk och inte minst nu när Elon är ute och
-                    gör hitlerhälsningar. <br>
+        <form action="" id="create-comment-form">
+            <div id="create-comment-container">
+                <p>post comment:</p>
+                <textarea name="" id="create-comment-content"></textarea>
+                <div id="submit-comment">
+                    <button>save</button>
+                    <select name="users" id="select-user">
+                        <option value="" disabled selected>select user</option>
+                    </select>
+                </div>
+            </div>
+        </form>
 
-                    Ni som köpt en Tesla; ångrar ni er?</p>
-            </div>
-        </div>
-
-        <div id="create-comment-container">
-            <p>post comment:</p>
-            <textarea name="" id=""></textarea>
-            <div id="submit-comment">
-                <button>save</button>
-                <select name="users">
-                    <option id="select" value="select-user">select user</option>
-                    <option value="user1">user_1</option>
-                    <option value="user2">user_2</option>
-                    <option value="user3">user_3</option>
-                    <option value="user4">user_4</option>
-                </select>
-            </div>
-        </div>
-
-        <div id="comments-container">
-            <div id="comment-rating-buttons">
-                <p id="comment-rate-up"></p>
-                <p id="comment-rate-down"></p>
-            </div>
-            <div id="comment-content">
-                <p id="comment-details"><span>DreadPiratePete</span> 311 points 3 hours ago</p>
-                <p id="post-comment">Notera att Tesla säljer bara 2 bilmodeller. Kollar du på 10 i top listorna ser du
-                    att
-                    tex Volvo har 4 olika modeller på listan (5 om vi räknar Polestar) medan Tesla bara har Model Y med
-                    på
-                    listan. Sett till nyregistreringar har Telsa ca hälften av Volvos marknadsandel. <br>
-
-                    Vad gäller ångrandet så kan jag anekdotiskt säga att ägarna redan är trötta att höra "äre en model
-                    SS
-                    höhö" skämt.</p>
-            </div>
-        </div>
-
-        <div id="comments-container">
-            <div id="comment-rating-buttons">
-                <p id="comment-rate-up"></p>
-                <p id="comment-rate-down"></p>
-            </div>
-            <div id="comment-content">
-                <p id="comment-details"><span>RevolutionaryAd3322</span> 203 points 3 hours ago</p>
-                <p id="post-comment">Hans utspel fick mig att sälja av 10år av Tesla investeringar snabbare än ögat iaf
-                </p>
-            </div>
-        </div>
-
-        <div id="comments-container">
-            <div id="comment-rating-buttons">
-                <p id="comment-rate-up"></p>
-                <p id="comment-rate-down"></p>
-            </div>
-            <div id="comment-content">
-                <p id="comment-details"><span>LongjumpingTurnip</span> 47 points 1 hour ago</p>
-                <p id="post-comment">min lämnas tillbaka i sommar. Mycket på grund av skammen</p>
-            </div>
-        </div>
+        <div id="comments-container"></div>
 
         <footer></footer>
 </body>
