use local storage to store info on last user/subreddit and get it on create post page

--- a/html/create-post.html
+++ b/html/create-post.html
@@ -20,6 +20,7 @@
     <script type="module" src="../javascript/createPost.js"></script>
     <script type="module" src="../javascript/populateSubRedditSelect.js"></script>
     <script type="module" src="../javascript/populateUserSelect.js"></script>
+    <script type="module" src="../javascript/getLocalStorageData.js"></script>
 </head>
 
 <body>
