added cursor pointed attribute to comment reaactions

--- a/html/post-page.html
+++ b/html/post-page.html
@@ -20,6 +20,7 @@
     <script type="module" src="../javascript/populateUserSelect.js"></script>
     <script type="module" src="../javascript/populateSpecificPost.js"></script>
     <script type="module" src="../javascript/printFooter.js"></script>
+    <script type="module" src="../javascript/getLocalStorageData.js"></script>
 </head>
 
 <body>
